# jules-arxiv

./: README.md  agent.md  index.html  main.py  pyproject.toml  requirements.txt  script.js  style.css  test_search.html
frontend/: TESTING_FRONTEND.md
frontend/static/: app.js  index.html  styles.css
src/models/: paper.py
src/services/: arxiv_service.py
tests/: test_main.py
tests/services/: test_arxiv_service.py
