[project]
name = "jules-arxiv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "feedparser>=6.0.11",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-dotenv>=1.1.0",
    "respx>=0.22.0",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.34.2",
]
